<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:id="@+id/layout_article_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc"
                app:srcCompat="@drawable/img_back_white" />
        </LinearLayout>

        <TextView
            android:id="@+id/article_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/article_heading_profile"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"
            android:textSize="@dimen/fontsize_article_heading"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="46dp"
        android:contentDescription="@string/desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_article_heading"
        app:srcCompat="@drawable/img_user" />

    <TextView
        android:id="@+id/lbl_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/tv_name"
        android:textSize="@dimen/fontsize_content_small"
        android:textStyle="normal"
        app:layout_constraintBaseline_toBaselineOf="@+id/input_name"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/input_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="name"
        android:hint="@string/hint_name"
        android:ems="12"
        android:inputType="textPersonName"
        android:labelFor="@+id/name_value"
        android:text="@string/name_value"
        android:textSize="@dimen/fontsize_content_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_avatar" />

    <TextView
        android:id="@+id/lbl_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/tv_email"
        android:textSize="@dimen/fontsize_content_small"
        android:textStyle="normal"
        app:layout_constraintBaseline_toBaselineOf="@+id/input_email"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="emailAddress"
        android:hint="@string/hint_email"
        android:ems="12"
        android:inputType="textEmailAddress"
        android:text="@string/email_value"
        android:textSize="@dimen/fontsize_content_small"
        app:layout_constraintEnd_toEndOf="@+id/input_name"
        app:layout_constraintTop_toBottomOf="@+id/input_name" />

    <TextView
        android:id="@+id/lbl_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/tv_sdt"
        android:textSize="@dimen/fontsize_content_small"
        android:textStyle="normal"
        app:layout_constraintBaseline_toBaselineOf="@+id/input_phone"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/input_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="phone"
        android:hint="@string/hint_phone"
        android:ems="12"
        android:inputType="phone"
        android:text="@string/phone_value"
        android:textSize="@dimen/fontsize_content_small"
        app:layout_constraintEnd_toEndOf="@+id/input_email"
        app:layout_constraintTop_toBottomOf="@+id/input_email" />

    <TextView
        android:id="@+id/lbl_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/tv_tuoi"
        android:textSize="@dimen/fontsize_content_small"
        android:textStyle="normal"
        app:layout_constraintBaseline_toBaselineOf="@+id/input_age"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/input_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="number"
        android:hint="@string/hint_phone"
        android:ems="12"
        android:inputType="number"
        android:text="@string/age_value"
        android:textSize="@dimen/fontsize_content_small"
        app:layout_constraintEnd_toEndOf="@+id/input_phone"
        app:layout_constraintTop_toBottomOf="@+id/input_phone" />

    <TextView
        android:id="@+id/lbl_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/tv_chieucao"
        android:textSize="@dimen/fontsize_content_small"
        android:textStyle="normal"
        app:layout_constraintBaseline_toBaselineOf="@+id/input_height"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/input_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="number"
        android:hint="@string/height_value"
        android:ems="12"
        android:inputType="number"
        android:text="@string/height_value"
        android:textSize="@dimen/fontsize_content_small"
        app:layout_constraintEnd_toEndOf="@+id/input_age"
        app:layout_constraintTop_toBottomOf="@+id/input_age" />

    <TextView
        android:id="@+id/lbl_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/tv_cannang"
        android:textSize="@dimen/fontsize_content_small"
        android:textStyle="normal"
        app:layout_constraintBaseline_toBaselineOf="@+id/input_weight"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/input_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="number"
        android:hint="@string/weight_value"
        android:ems="12"
        android:inputType="number"
        android:text="@string/weight_value"
        android:textSize="@dimen/fontsize_content_small"
        app:layout_constraintEnd_toEndOf="@+id/input_height"
        app:layout_constraintTop_toBottomOf="@+id/input_height" />

    <TextView
        android:id="@+id/lbl_sexsual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/tv_gioitinh"
        android:textSize="@dimen/fontsize_content_small"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/radGroup_sexual"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/radGroup_sexual" />

    <RadioGroup
        android:id="@+id/radGroup_sexual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/input_weight"
        app:layout_constraintTop_toBottomOf="@+id/input_weight">

        <RadioButton
            android:id="@+id/rad_sexual_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:checked="true"
            android:text="@string/rad_nam"
            android:textSize="@dimen/fontsize_content_small" />

        <RadioButton
            android:id="@+id/rad_sexual_femail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_weight="0"
            android:text="@string/rad_nu"
            android:textSize="@dimen/fontsize_content_small" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/btn_update"
        android:textColorHint="#00BCD4"
        app:iconPadding="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radGroup_sexual" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/btn_huy"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/btn_save"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>