<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WaterActivity">

    <LinearLayout
        android:id="@+id/layout_article_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc"
                app:srcCompat="@drawable/img_back_white" />
        </LinearLayout>

        <TextView
            android:id="@+id/article_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/article_heading_water"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"
            android:textSize="@dimen/fontsize_article_heading"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/iw_water"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="164dp"
        android:contentDescription="@string/water"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_water" />

    <LinearLayout
        android:id="@+id/layout_waterNeeded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iw_water">
        <TextView
            android:id="@+id/lbl_waterNeeded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nuoc_can_uong"
            android:textSize="@dimen/fontsize_content"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_waterNeeded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="water needed"
            android:hint="@string/hint_water_needed"
            android:ems="1"
            android:inputType="number"
            android:textSize="@dimen/fontsize_content"
            android:layout_marginStart="8dp"
            android:background="@null"
            android:textColorHint="#757575"
            android:textStyle="bold"
            android:labelFor="@+id/lbl_waterNeeded"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_waterDrinked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_waterNeeded">

        <TextView
            android:id="@+id/tv_waterDrinked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nuoc_da_uong"
            android:textSize="@dimen/fontsize_content"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/content_waterDrinked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="1"
            android:text="@string/enter_water_drinked"
            android:textSize="@dimen/fontsize_content"
            android:textStyle="bold" />

    </LinearLayout>


    <ImageView
        android:id="@+id/iv_add"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="46dp"
        android:contentDescription="@string/add"
        app:layout_constraintBottom_toBottomOf="@+id/iv_sub"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/img_plush" />

    <ImageView
        android:id="@+id/iv_sub"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="46dp"
        android:layout_marginBottom="46dp"
        android:contentDescription="@string/minus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/img_sub" />

</androidx.constraintlayout.widget.ConstraintLayout>