<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/tai_khoan"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_home"
        android:orderInCategory="20"
        android:title="@string/trang_chu"
        android:icon="@drawable/icon_home_white_2"
        app:showAsAction="ifRoom"/>

<!--    <item-->
<!--        android:id="@+id/action_bmi"-->
<!--        android:orderInCategory="30"-->
<!--        android:title="@string/lbl_bmi"-->
<!--        app:showAsAction="never"/>-->

<!--    <item-->
<!--        android:id="@+id/action_weight"-->
<!--        android:orderInCategory="40"-->
<!--        android:title="@string/lbl_weight"-->
<!--        app:showAsAction="never"/>-->

<!--    <item-->
<!--        android:id="@+id/action_water"-->
<!--        android:orderInCategory="50"-->
<!--        android:title="@string/lbl_water"-->
<!--        app:showAsAction="never"/>-->

<!--    <item-->
<!--        android:id="@+id/action_sleep"-->
<!--        android:orderInCategory="60"-->
<!--        android:title="@string/lbl_sleep"-->
<!--        app:showAsAction="never"/>-->

    <item
        android:id="@+id/action_post"
        android:orderInCategory="70"
        android:title="Bài viết"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="1000"
        android:title="@string/dang_xuat"
        app:showAsAction="never"/>

</menu>